<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>centroid_nav</name>
  <version>1.1.0</version>
  <description>Autonomous navigation using only lidar /scan data for obstacle avoidance and /odom for movement</description>
  <maintainer email="developer-contact@ironcreeper.com">IRON CREEPER</maintainer>
  <license>Proprietary - All rights reserved</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
